--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru"
     prefix="og: https://ogp.me/ns# video: https://ogp.me/ns/video# ya: https://webmaster.yandex.ru/vocabularies/">
-
 <head
+    version="1"
     prefix="fb: https://ogp.me/ns/fb# profile: https://ogp.me/ns/profile# collection: https://ogp.me/ns/collection# og: http://ogp.me/ns# video: http://ogp.me/ns/video# ya: https://webmaster.yandex.ru/vocabularies/">
     <link rel="image_src"
         href="https://storage-cdn.nuum.ru/api/v1/files/nuum-static-storage-production/back_video_image_resized-1029780/2361d89d176fd9191f34365116b66776+000001934F7960A398E965150584EB21.jpg">
@@ -30,9 +30,9 @@
     <meta property="og:video:iframe"
         content="https://nuum.ru/embed/videos/3884570-interviu-krishtianu-ronaldu-i-mrbeast-sekrety-uspekha-na-youtube-russkie-subtitry">
     <meta property="og:video:url"
-        content="https://nuum.ru/embed/videos/3884570-interviu-krishtianu-ronaldu-i-mrbeast-sekrety-uspekha-na-youtube-russkie-subtitry">
+        content="https://vod-playlist-cache.nuum.ru/nuum-vod-production/9a796055-f674-4e05-705c-9e9a0b7895b0/index-f1-v1.m3u8">
     <meta property="og:video:secure_url"
-        content="https://nuum.ru/embed/videos/3884570-interviu-krishtianu-ronaldu-i-mrbeast-sekrety-uspekha-na-youtube-russkie-subtitry">
+        content="https://vod-playlist-cache.nuum.ru/nuum-vod-production/9a796055-f674-4e05-705c-9e9a0b7895b0/index-f1-v1.m3u8">
     <meta property="og:description" content="Роналду и Mr.Beast встретились, чтобы сломать Интернет!">
     <meta property="video:duration" content="839">
     <meta property="og:image"
